[gd_scene load_steps=3 format=3 uid="uid://cdnjdljqudydv"]

[ext_resource type="Script" path="res://control.gd" id="1_dk2t1"]
[ext_resource type="Texture2D" uid="uid://x3ee60wldnga" path="res://Assets/Sprites/PlaceholderImages/spr_stroked_clock.png" id="2_aabb6"]

[node name="InventoryButtons" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
script = ExtResource("1_dk2t1")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 3

[node name="waterBtn" type="TextureButton" parent="GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="earthBtn" type="TextureButton" parent="GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="fireBtn" type="TextureButton" parent="GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="airBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="iceBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="lavaBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="lifeBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="deathBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="stoneBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="metalBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="sandBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="poisonBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="eggBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="ironBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="chalkBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="goldBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="sulfurBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="mercuryBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="saltBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="copperBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="tinBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="leadBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="silverBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[node name="bismuthBtn" type="TextureButton" parent="GridContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("2_aabb6")

[connection signal="button_down" from="GridContainer/waterBtn" to="." method="_on_water_btn_button_down"]
[connection signal="button_down" from="GridContainer/earthBtn" to="." method="_on_earth_btn_button_down"]
[connection signal="button_down" from="GridContainer/fireBtn" to="." method="_on_fire_btn_button_down"]
[connection signal="button_down" from="GridContainer/airBtn" to="." method="_on_air_btn_button_down"]
[connection signal="button_down" from="GridContainer/iceBtn" to="." method="_on_ice_btn_button_down"]
[connection signal="button_down" from="GridContainer/lavaBtn" to="." method="_on_lava_btn_button_down"]
[connection signal="button_down" from="GridContainer/lifeBtn" to="." method="_on_life_btn_button_down"]
[connection signal="button_down" from="GridContainer/deathBtn" to="." method="_on_death_btn_button_down"]
[connection signal="button_down" from="GridContainer/stoneBtn" to="." method="_on_stone_btn_button_down"]
[connection signal="button_down" from="GridContainer/metalBtn" to="." method="_on_metal_btn_button_down"]
[connection signal="button_down" from="GridContainer/sandBtn" to="." method="_on_sand_btn_button_down"]
[connection signal="button_down" from="GridContainer/poisonBtn" to="." method="_on_poison_btn_button_down"]
[connection signal="button_down" from="GridContainer/eggBtn" to="." method="_on_egg_btn_button_down"]
[connection signal="button_down" from="GridContainer/ironBtn" to="." method="_on_iron_btn_button_down"]
[connection signal="button_down" from="GridContainer/chalkBtn" to="." method="_on_chalk_btn_button_down"]
[connection signal="button_down" from="GridContainer/goldBtn" to="." method="_on_gold_btn_button_down"]
[connection signal="button_down" from="GridContainer/sulfurBtn" to="." method="_on_sulfur_btn_button_down"]
[connection signal="button_down" from="GridContainer/mercuryBtn" to="." method="_on_mercury_btn_button_down"]
[connection signal="button_down" from="GridContainer/saltBtn" to="." method="_on_salt_btn_button_down"]
[connection signal="button_down" from="GridContainer/copperBtn" to="." method="_on_copper_btn_button_down"]
[connection signal="button_down" from="GridContainer/tinBtn" to="." method="_on_tin_btn_button_down"]
[connection signal="button_down" from="GridContainer/leadBtn" to="." method="_on_lead_btn_button_down"]
[connection signal="button_down" from="GridContainer/silverBtn" to="." method="_on_silver_btn_button_down"]
[connection signal="button_down" from="GridContainer/bismuthBtn" to="." method="_on_bismuth_btn_button_down"]
